--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Odin - Library App</title>
 </head>
 <body>
+    <h1>List of Books</h1>
+    <div class="card-container">
+        <div class="card">
+            <h4>Title</h4>
+            <h6>Author</h6>
+            <h6>X Pages</h6>
+            <h6>Not Read</h6>
+        </div>
+        <div class="card">
+            <h4>Title</h4>
+            <h6>Author</h6>
+            <h6>X Pages</h6>
+            <h6>Not Read</h6>
+        </div>
+    </div>
     
     <script src="./script.js"></script>
 </body>
