--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>List of Books</h1>
-    <div class="card-container">
+    <div class="card-container" id="card-container">
     </div>
     
     <script src="./script.js"></script>
