--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Odin - Library App</title>
 </head>
 <body>
-    <h1>List of Books</h1>
-    <div class="card-container" id="card-container">
+    <div class="container">
+        <div class="top-container">
+            <h1>List of Books</h1>
+            <button type="button" class="btn">New Book</button>
+        </div>
+        <div class="card-container" id="card-container">
+        </div>
     </div>
     
     <script src="./script.js"></script>
